# pushk2pre3rdrop

./: .gitignore  CMakeLists.txt  LICENSE  README.md
results/: arch_ver.txt  origpacked.txt  restored.txt  rtblfiles.txt  srcfiles.txt  transbench.txt  transfiles.txt
results/example10b.bin/: example10b.bin.7z  example10b.bin.arj  example10b.bin.br  example10b.bin.bz2  example10b.bin.lzma  example10b.bin.rar  example10b.bin.xz  example10b.bin.zst  example10bd.bin.7z  example10bd.bin.arj  example10bd.bin.br  example10bd.bin.bz2  example10bd.bin.lzma  example10bd.bin.rar  example10bd.bin.rdrop_log.txt  example10bd.bin.xz  example10bd.bin.zst
results/example7b.bin/: example7b.bin.7z  example7b.bin.arj  example7b.bin.br  example7b.bin.bz2  example7b.bin.lzma  example7b.bin.rar  example7b.bin.xz  example7b.bin.zst  example7bd.bin.7z  example7bd.bin.arj  example7bd.bin.br  example7bd.bin.bz2  example7bd.bin.lzma  example7bd.bin.rar  example7bd.bin.rdrop_log.txt  example7bd.bin.xz  example7bd.bin.zst
results/example8.bin/: example8.bin.7z  example8.bin.arj  example8.bin.br  example8.bin.bz2  example8.bin.lzma  example8.bin.rar  example8.bin.xz  example8.bin.zst  example8d.bin.7z  example8d.bin.arj  example8d.bin.br  example8d.bin.bz2  example8d.bin.lzma  example8d.bin.rar  example8d.bin.rdrop_log.txt  example8d.bin.xz  example8d.bin.zst
results/example9b.bin/: example9b.bin.7z  example9b.bin.arj  (+15 more)
src/: argparser.cpp  argsparser.hpp  errors.hpp  funcmerge.cpp  funcsplit.cpp  global.cpp  main.cpp
tests/: archs.py  cfgexamples.py  glbdefs.py  logs.py  packsrc.py  test1.py
(+22 files in other folders)
